# computer-vision-course-basics

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
notebooks/: hello_vision.ipynb
src/: hello_vision.py
