[tool.poetry]
name = "computer-vision-course-basics"
version = "0.1.0"
description = "Curso de fundamentos de Computer Vision con Python, Jupyter y OpenCV"
authors = ["Mario Triviño <mariotrivinor@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26"
matplotlib = "^3.8"
jupyter = "^1.0"
opencv-python = "^4.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
